Added some bitchin' pony magic

--- a/lib/views/index.erb
+++ b/lib/views/index.erb
@@ -1,1 +1,19 @@
-<H1>Hello, Traffic Spyer</H1>
+  <html>
+    <head><title>교통 스파이</title></head>
+    <body background ="http://i1325.photobucket.com/albums/u637/aimeemaher1/background_zps13e5ab6d.png">
+      <center>
+        <h1><img src = "http://i1325.photobucket.com/albums/u637/aimeemaher1/vintagebanner5_zps81071a28.png"/></h1>
+      <br>
+      <iframe width="50%" height="83" scrolling="yes" frameborder="no" src="https://w.soundcloud.com/player/?url=http%3A%2F%2Fapi.soundcloud.com%2Ftracks%2F75742759"></iframe>
+        <!-- <object width="300" height="42">
+          <param name="src" value="LINKHERE">
+          <param name="autoplay" value="false">
+          <param name="controller" value="true">
+          <param name="bgcolor" value="#FFFFFF">
+          <embed src="http://freedownloads.last.fm/download/481853891/SNSD%2B-%2BKissing%2BYou%2BRemix.mp3" autostart="true" loop="false" width="300" height="42" controller="true" bgcolor="#8A2BE2">
+        </object> -->
+      </center>
+    </body>
+  </html>
+
+
