--- a/lib/views/index.erb
+++ b/lib/views/index.erb
@@ -1,19 +1,23 @@
   <html>
     <head><title>교통 스파이</title></head>
     <body background ="http://i1325.photobucket.com/albums/u637/aimeemaher1/background_zps13e5ab6d.png">
+      <div style="width:480px;height:125px;position:relative;">
+       <div style="position:absolute; z-index:1;">
+        <object classid="clsid:D27CDB6E-AE6D-11cf-96B8-444553540000" codebase="http://fpdownload.macromedia.com/pub/shockwave/cabs/flash/swflash.cab#version=8,0,0,0" width="1480" height="1200">
+          <param name="movie" value="flashmovie.swf" />
+          <param name="quality" value="high" />
+          <param name="wmode" value="transparent">
+            <embed src="http://www.aimzatron.com/resources/stars-01.swf" quality="high" type="application/x-shockwave-flash" width="1480" height="1200" wmode="transparent" pluginspage="http://www.macromedia.com/go/getflashplayer" />
+        </object>
+       </div>
+      <div style="position:relative; z-index:2;">
+        </div>
+      </div>
       <center>
-        <h1><img src = "http://i1325.photobucket.com/albums/u637/aimeemaher1/vintagebanner5_zps81071a28.png"/></h1>
+        <h1><img src = "http://i1325.photobucket.com/albums/u637/aimeemaher1/vintagebanner4_zpsfd2335fb.png"/></h1>
       <br>
-      <iframe width="50%" height="83" scrolling="yes" frameborder="no" src="https://w.soundcloud.com/player/?url=http%3A%2F%2Fapi.soundcloud.com%2Ftracks%2F75742759"></iframe>
-        <!-- <object width="300" height="42">
-          <param name="src" value="LINKHERE">
-          <param name="autoplay" value="false">
-          <param name="controller" value="true">
-          <param name="bgcolor" value="#FFFFFF">
-          <embed src="http://freedownloads.last.fm/download/481853891/SNSD%2B-%2BKissing%2BYou%2BRemix.mp3" autostart="true" loop="false" width="300" height="42" controller="true" bgcolor="#8A2BE2">
-        </object> -->
+        <embed src="http://www.aimzatron.com/resources/Thalassa%20-%20The%20robots%20are%20dancing.mp3" loop="true" hidden="true" autostart="true"></embed>
       </center>
     </body>
   </html>
-
 
