--- a/lib/views/url.erb
+++ b/lib/views/url.erb
@@ -1,12 +1,52 @@
-<h1>URL Stats for <%= @url.relative_path %></h1>
+<html>
+<style type="text/css">
+div { padding: 5px; }
+#outer {
+    border: 1px dotted #F00;
+    position: absolute;
+    top: 0px;
+    right: 0px;
+    left: 0px;
+}
+#inner {
+    border: 1px dotted #0F0;
+    margin: 0 auto;
+    text-align: center;
+    width: 1400px;
+}
+</style>
 
-<% if @url.response_times.empty? %>
-  No requests have been made
-<% else %>
-  <%= @url.response_times.size %> requests have been made.
-  <ul>
-    <% @url.response_times.each do |response_time| %>
-      <li><%= response_time %> ms</li>
-    <% end %>
-  </ul>
-<% end %>
+<div id="outer">
+    <div id="inner"><img src = "http://i1325.photobucket.com/albums/u637/aimeemaher1/RBWP_zpsaac818be.png" /></div>
+</div>
+<center>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<body background = "http://th06.deviantart.net/fs41/PRE/f/2009/017/9/b/Pretty_Rainbow_Background_by_YuniNaoki.jpg">
+<center>
+    <head><title>URL</title></head>
+      <h1 style= "font-family: arial; color: white">URL Stats for <%= @url.relative_path %></h1>
+
+      <% if @url.response_times.empty? %>
+        <li style= "font-family: arial; color: white">No requests have been made</li>
+      <% else %>
+        <li style= "font-family: arial; color: white"><%= @url.response_times.size %> requests have been made.</li>
+        <ul>
+          <li style= "font-family: arial; color: white"><% @url.response_times.each do |response_time| %></li>
+            <li style= "font-family: arial; color: white"><%= response_time %> ms</li>
+          <% end %>
+        </ul>
+      <% end %>
+        </body>
+</html>
