--- a/lib/views/url.erb
+++ b/lib/views/url.erb
@@ -1,4 +1,5 @@
 <html>
+    <head><title>URL</title>
 <style type="text/css">
 div { padding: 5px; }
 #outer {
@@ -14,8 +15,9 @@ div { padding: 5px; }
     text-align: center;
     width: 1400px;
 }
-</style>
+</style></head>
 
+<body background = "http://th06.deviantart.net/fs41/PRE/f/2009/017/9/b/Pretty_Rainbow_Background_by_YuniNaoki.jpg">
 <div id="outer">
     <div id="inner"><img src = "http://i1325.photobucket.com/albums/u637/aimeemaher1/RBWP_zpsaac818be.png" /></div>
 </div>
@@ -33,9 +35,7 @@ div { padding: 5px; }
 <br>
 <br>
 <br>
-<body background = "http://th06.deviantart.net/fs41/PRE/f/2009/017/9/b/Pretty_Rainbow_Background_by_YuniNaoki.jpg">
 <center>
-    <head><title>URL</title></head>
       <h1 style= "font-family: arial; color: white">URL Stats for <%= @url.relative_path %></h1>
 
       <% if @url.response_times.empty? %>
