--- a/lib/views/url.erb
+++ b/lib/views/url.erb
@@ -1,41 +1,42 @@
 <html>
-    <head><title>URL</title>
-<style type="text/css">
-div { padding: 5px; }
-#outer {
-    border: 1px dotted #F00;
-    position: absolute;
-    top: 0px;
-    right: 0px;
-    left: 0px;
-}
-#inner {
-    border: 1px dotted #0F0;
-    margin: 0 auto;
-    text-align: center;
-    width: 1400px;
-}
-</style></head>
+  <head>
+    <title>URL</title>
+    <style type="text/css">
+      div { padding: 5px; }
+      #outer {
+        //    border: 1px dotted #F00;
+        position: absolute;
+        top: 0px;
+        right: 0px;
+        left: 0px;
+      }
+      #inner {
+        //    border: 1px dotted #0F0;
+        margin: 0 auto;
+        text-align: center;
+        width: 1400px;
+      }
+    </style>
+  </head>
 
-<body background = "http://th06.deviantart.net/fs41/PRE/f/2009/017/9/b/Pretty_Rainbow_Background_by_YuniNaoki.jpg">
-<div id="outer">
-    <div id="inner"><img src = "http://i1325.photobucket.com/albums/u637/aimeemaher1/RBWP_zpsaac818be.png" /></div>
-</div>
-<center>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<center>
+  <body background = "http://th06.deviantart.net/fs41/PRE/f/2009/017/9/b/Pretty_Rainbow_Background_by_YuniNaoki.jpg">
+    <div id="outer">
+      <div id="inner"><img src = "http://i1325.photobucket.com/albums/u637/aimeemaher1/RBWP_zpsaac818be.png" /></div>
+    </div>
+    <center>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
       <h1 style= "font-family: arial; color: white">URL Stats for <%= @url.relative_path %></h1>
 
       <% if @url.response_times.empty? %>
@@ -48,5 +49,6 @@ div { padding: 5px; }
           <% end %>
         </ul>
       <% end %>
-        </body>
+    </center>
+  </body>
 </html>
