--- a/lib/views/application_details.erb
+++ b/lib/views/application_details.erb
@@ -4,14 +4,14 @@
 
       div { padding: 5px; }
       #outer {
-        border: 1px dotted #F00;
+       // border: 1px dotted #F00;
         position: absolute;
         top: 0px;
         right: 0px;
         left: 0px;
       }
       #inner {
-        border: 1px dotted #0F0;
+        //border: 1px dotted #0F0;
         margin: 0 auto;
         text-align: center;
         width: 1400px;
